create default namespace
