# shared/database/models/namespace.go
@@ -1,0 +1,20 @@
+package models
+
+import "time"
+
+type Namespace struct {
+	ID   string `gorm:"primaryKey"`
+	Name string `gorm:"type:text;not null;unique"`
+	DNS  string `gorm:"type:text; not null;unique"`
+
+	MaxWorkers        int `gorm:"not null;default:10"`
+	MaxConcurrentJobs int `gorm:"not null;default:50"`
+	MaxPods           int `gorm:"not null;default:20"`
+
+	CPURequestMilli int `gorm:"not null;default:100"`
+	CPULimitMilli   int `gorm:"not null;default:500"`
+
+	MemoryRequestMB int       `gorm:"not null;default:256"`
+	MemoryLimitMB   int       `gorm:"not null;default:512"`
+	CreatedAt       time.Time `gorm:"autoCreateTime"`
+}
